--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+*, body, html{
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+  font: inherit;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .nav{
   background: linear-gradient(180deg, rgba(0,106,254,1) 0%, rgba(0,105,255,1) 100%);
   height:24px;
@@ -9,31 +18,18 @@
 
 .navList{
   list-style: none;
-  margin-right: 25px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#navBtn{
+  height: 30px;
+  width: 150px;
 }
 
 #navTitle{
-  margin-left: 100px;
-  color: white;
-  font-size: 38px;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.navBtn{
-  color:white;
-}
-
-.navBtn:visited,
-.navBtn:link{
-  text-decoration: none;
-}
-
-.navBtn:not(:last-child){
-  margin-right: 30px;
-}
-
-#navBtnBg{
-  background-color: #414141;
-  padding: 7px 10px 7px 10px;
+  display: flex;
+  align-items: center;
 }
