--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap');
+
+
 *, body, html{
   margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
   font: inherit;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
+}
+
+.app{
+  height: 100vh;
+}
+
+.pageContent{
+  display: flex;
+  justify-content: center;
 }
 
 .nav{
-  background: linear-gradient(180deg, rgba(0,106,254,1) 0%, rgba(0,105,255,1) 100%);
-  height:24px;
-  padding: 20px;
+  background-color: #171A21;
+  height:5%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 8px 20px 8px 35px;
 }
 
 .navList{
@@ -31,5 +43,27 @@
 
 #navTitle{
   display: flex;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+}
+
+.navEnd{
+  display: flex;
+  align-items: center;
+}
+
+#navImage{
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+}
+
+.home{
+  background-color: #1B2838;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
