--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ textarea:focus, input:focus, button:focus{
 #navTitleText{
   color: white;
   font-size: 24px;
+  text-decoration: none;
 }
 
 
@@ -108,6 +109,7 @@ textarea:focus, input:focus, button:focus{
   padding: 25px 15px 25px 15px;
   display: flex;
   flex-direction: column;
+  max-width: 100%;
 }
 
 .shadow-black{
