--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,7 @@ display: flex;
 
 .results__pic{
   height: 150px;
+  border-radius: 5px;
 }
 
 .results__header-info{
@@ -259,4 +260,74 @@ display: flex;
   padding: 5px 8px;
   border-radius: 5px;
   margin-bottom: 10px;
+}
+
+.users__title{
+  font-size: 24px;
+  text-align: center;
+  font-weight: 400;
+  margin-bottom: 25px;
+}
+
+.users__title-avatar{
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+
+.users__title-text{
+  
+}
+
+.users__ban-text{
+  margin-left: 15px;
+}
+
+.users__info{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.users__field{
+  display: flex;
+  justify-content: space-between;
+}
+
+.users__text{
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+.users__footer{
+  margin-top: 10px;
+}
+
+.users__footer-text{
+  font-size: 16px;
+  margin-bottom: 5px;
+  width: 25%;
+}
+
+.users__footer-result{
+  display: inline;
+  font-weight: bold;
+  background-color: #101822;
+  color: #9e9e9e;
+  width: 100%;
+  padding: 5px 8px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.deleteBtn{
+  padding: 10px 20px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+}
+
+.deleteBtn:hover{
+  cursor: pointer;
 }
